syntax = "proto3";

import "github.com/loomnetwork/go-loom/types/types.proto";

message Params {
    uint64 validator_count = 1;
    uint64 vote_allocation = 2;
    int64 election_cycle_length = 3;
    uint64 min_power_fraction = 4;
    Address coin_contract_address = 5;
    uint64 validator_salary = 6;
}

message State {
    Params params = 1;
    repeated Validator validators = 2;
    int64 last_election_time = 3;
}

message Voter {
    Address address = 1;
    uint64 balance = 2;
    Address proxy_address = 3;
    repeated Address principal_addresses = 4;
}

message Candidate {
    Address address = 1;
    bytes pub_key = 2;
}

message CandidateList {
    repeated Candidate candidates = 1;
}

message Vote {
    Address voter_address = 1;
    Address candidate_address = 2;
    uint64 amount = 3;
}

message VoteList {
    repeated Vote votes = 1;
}

message DPOSInitRequest {
    Params params = 1;
    repeated Validator validators = 2;
}

message DelegateRequest {
    Address validator_address = 1;
    int64 amount = 2;
}

message RedelegateRequest {
    Address validator_address = 1;
    int64 amount = 2;
}

message UnbondRequest {
    Address validator_address = 1;
    int64 amount = 2;
}

message RegisterCandidateRequest {
    bytes pub_key = 1;
}

message RegisterCandidateResponse {
}

message UnregisterCandidateRequest {
}

message UnregisterCandidateResponse {
}

message VoteRequest {
    Address candidate_address = 1;
    int64 amount = 2;
}

message VoteResponse {
}

message ElectRequest {
}

message ElectResponse {
}

message ListValidatorsRequest {
}

message ListValidatorsResponse {
    repeated Validator validators = 1;
}

message ListCandidateRequest {
}

message ListCandidateResponse {
    repeated Candidate candidates = 1;
}
